update linkedin url

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a href="" target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/fransuelton-francisco-2512a3223/" target="_blank" class="linkedin">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/fransuelton/" target="_blank" class="linkedin">LinkedIn</a>
                         </li>
                         <li>
                             <a href="https://github.com/Fransuelton" target="_blank" class="github">GitHub</a>
