new tab added, favicon added and update section on

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="./src/imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/rolagem.css">
-    
+
     <title>Mini Portfólio</title>
 </head>
+
 <body>
     <main class="cartao">
         <div class="minhas-informacoes">
@@ -31,6 +34,9 @@
                 <li class="aba" id="minhas-redes">
                     <img src="./src/imagens/coracao.gif" alt="ícone de redes sociais">
                 </li>
+                <li class="aba" id="projetos">
+                    <img src="./src/imagens/projeto.gif" alt="icone da aba projetos">
+                </li>
             </ul>
 
             <div class="informacoes-abas">
@@ -40,18 +46,18 @@
                     <div class="descricao">
                         <p>
                             Oi! meu nome é Fransuelton, seja bem-vindo(a)!
-                          </p>
-            
-                          <p>
+                        </p>
+
+                        <p>
                             <br>Tenho 17 anos e Sou apaixonado pela programação.
-                            estou terminando o 3ª do Ensino Médio e
-                            faço curso técnico em Redes de Computadores no IMD/UFRN em Caicó-RN.
+                            atualmente estou concluíndo o 3ª ano do Ensino Médio e
+                            faço curso técnico de Redes de Computadores no IMD/UFRN em Caicó-RN.
                             Sempre tive o sonho de trabalhar com programação e
                             atualmente comecei a colocar esse sonho em prática estudando
-                            <span>HTML, CSS e JavaScript.</span> 
+                            <span>HTML, CSS e Javascript.</span>
                             Gosto muito de café (até demais), e meus principais hobbies são
                             jogar Video-Game, Ouvir Música e Assistir filmes e séries.
-                          </p>
+                        </p>
                     </div>
                 </div>
 
@@ -71,10 +77,24 @@
                     </ul>
                 </div>
 
+                <div class="informacao" id="informacao-projetos">
+                    <h3 class="sub-titulo">Meus projetos</h3>
+
+                    <ul class="projetos">
+                        <li>
+                            <a href="https://fransuelton.github.io/calculadora-de-media/" target="_blank" class="projeto1">Calculadora de Média</a>
+                        </li>
+                        <li>
+                            <a href="https://fransuelton.github.io/formulario-de-cadastro/" target="_blank" class="projeto2">Formulário de Cadastro</a>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </main>
 
     <script src="./src/js/index.js"></script>
 </body>
+
 </html>
