atualização de descrição

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
             <h1 class="nome">Fransuelton Francisco</h1>
-            <h2 class="cargo">Desenvolvedor Frontend Júnior</h2>
+            <h2 class="cargo">Desenvolvedor Frontend</h2>
         </div>
 
         <div class="conteudo">
@@ -50,7 +50,7 @@
 
                         <p>
                             <br>Tenho 17 anos e Sou apaixonado pela programação.
-                            faço curso técnico de Redes de Computadores no IMD/UFRN em Caicó-RN.
+                            faço curso técnico de T.I com ênfase em Redes de Computadores no IMD/UFRN em Caicó-RN.
                             Sempre tive o sonho de trabalhar com programação e
                             atualmente comecei a colocar esse sonho em prática estudando
                             <span>HTML, CSS e Javascript.</span>
