--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                         </p>
 
                         <p>
-                            <br>Tenho 17 anos e Sou apaixonado pela programação.
-                            faço curso técnico de T.I com ênfase em Redes de Computadores no IMD/UFRN em Caicó-RN.
-                            Sempre tive o sonho de trabalhar com programação e
-                            atualmente comecei a colocar esse sonho em prática estudando
+                            <br>Tenho 18 anos e Sou apaixonado pela programação.
+                            faço curso técnico de T.I com ênfase em Redes de Computadores no IMD/UFRN.
+                            Sempre tive o sonho de trabalhar com programação e atualmente comecei a colocar esse sonho em prática estudando
                             <span>HTML, CSS e Javascript.</span>
                             Gosto muito de café (até demais), e meus principais hobbies são
                             jogar Video-Game, Ouvir Música e Assistir filmes e séries.
