adicionado novo projeto

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <ul class="redes-sociais">
                         <li>
-                            <a href="" target="_blank" class="curriculo">Currículo</a>
+                            <a href="#" target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/fransuelton/" target="_blank" class="linkedin">LinkedIn</a>
@@ -84,6 +84,9 @@
                         </li>
                         <li>
                             <a href="https://fransuelton.github.io/formulario-de-cadastro/" target="_blank" class="projeto2">Formulário de Cadastro</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Fransuelton/landing-page-acai" target="_blank" class="projeto3">Landing Page Açai</a>
                         </li>
                     </ul>
                 </div>
