modificando link do projeto

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <a href="https://fransuelton.github.io/formulario-de-cadastro/" target="_blank" class="projeto2">Formulário de Cadastro</a>
                         </li>
                         <li>
-                            <a href="https://github.com/Fransuelton/landing-page-acai" target="_blank" class="projeto3">Landing Page Açai</a>
+                            <a href="https://fransuelton.github.io/landing-page-acai/" target="_blank" class="projeto3">Landing Page Açai</a>
                         </li>
                     </ul>
                 </div>
