adicionei novos projetos e mudei o sobre

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
             <h1 class="nome">Fransuelton Francisco</h1>
-            <h2 class="cargo">Desenvolvedor Frontend</h2>
+            <h2 class="cargo">Desenvolvedor Front-End</h2>
         </div>
 
         <div class="conteudo">
@@ -50,7 +50,7 @@
 
                         <p>
                             <br>Tenho 18 anos e Sou apaixonado pela programação.
-                            faço curso técnico de T.I com ênfase em Redes de Computadores no IMD/UFRN.
+                            faço curso técnico de Redes de Computadores no IMD/UFRN.
                             Sempre tive o sonho de trabalhar com programação e atualmente comecei a colocar esse sonho em prática estudando
                             <span>HTML, CSS e Javascript.</span>
                             Gosto muito de café (até demais), e meus principais hobbies são
@@ -80,13 +80,13 @@
 
                     <ul class="projetos">
                         <li>
-                            <a href="https://fransuelton.github.io/calculadora-de-media/" target="_blank" class="projeto1">Calculadora de Média</a>
+                            <a href="https://tiktok---jornada-2d662.web.app/" target="_blank" class="projeto1">TikTok Clone</a>
                         </li>
                         <li>
                             <a href="https://fransuelton.github.io/formulario-de-cadastro/" target="_blank" class="projeto2">Formulário de Cadastro</a>
                         </li>
                         <li>
-                            <a href="https://fransuelton.github.io/landing-page-acai/" target="_blank" class="projeto3">Landing Page Açai</a>
+                            <a href="https://fransuelton.github.io/landing-page-agencia-xyz/" target="_blank" class="projeto3">Landing Page Agência XYZ</a>
                         </li>
                     </ul>
                 </div>
